# drf-api-permission

./: Dockerfile  db.sqlite3  docker-compose.yml  pyproject.toml  requirements.txt
cars/: models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
cars/migrations/: 0001_initial.py
drf_api_permissions_project/: asgi.py  settings.py  urls.py  wsgi.py
